--- a/Timetable/Timetable.csproj
+++ b/Timetable/Timetable.csproj
@@ -25,6 +25,6 @@
     <PackageReference Include="VkNet" Version="1.70.0" />
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
