--- a/Timetable/Dockerfile
+++ b/Timetable/Dockerfile
@@ -15,10 +15,9 @@ RUN dotnet build "Timetable.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "Timetable.csproj" -c Release -o /app/publish
 
-RUN apt-get update && apt-get install -y libfontconfig1
-
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENV ASPNETCORE_URLS http://*:3810
+RUN apt -y update && apt install -y libfontconfig1
 ENTRYPOINT ["dotnet", "Timetable.dll"]
